--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
   "name": "Paste to download",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "Paste to download makes it easy to save images copied to your clipboard.",
-  "browser_action": {
+  "action": {
     "default_title": "Paste to download",
     "default_popup": "index.html",
     "default_icon": {
@@ -16,5 +16,5 @@
     "48": "assets/logo48x48.png",
     "128": "assets/logo128x128.png"
   },
-  "manifest_version": 2
+  "manifest_version": 3
 }
